# Meirs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
meirs-cli/: Cargo.toml  build.rs
meirs-cli/src/: error.rs  main.rs  prompt.rs
meirs-core/: Cargo.toml
meirs-core/src/: eportal_client.rs  error.rs  lib.rs  model.rs  utils.rs
