[package]
name = "meirs-core"
version.workspace = true
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.4", features = ["query", "gzip"] }
rand = "0.10.1"
regex = "1.12.3"
scraper = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
url = "2"
thiserror = "2"
tabled = "0.21.0"
encoding_rs = "0.8"
